[gd_scene load_steps=11 format=3 uid="uid://netk700n3adc"]

[ext_resource type="Texture2D" uid="uid://cr1k7pct7qu6s" path="res://Assets/background.png" id="1_fnd0r"]
[ext_resource type="Script" path="res://Scipts/CipherScene.gd" id="1_pefqs"]
[ext_resource type="Texture2D" uid="uid://fahhetjlnj5n" path="res://Assets/guide window.png" id="2_iit0j"]
[ext_resource type="Texture2D" uid="uid://c3su3ho7e2c85" path="res://Assets/hover.png" id="2_lpgij"]
[ext_resource type="FontFile" uid="uid://bil17e4ufdpeo" path="res://Assets/Pixel Game.otf" id="3_yevfl"]
[ext_resource type="Texture2D" uid="uid://cv7in5m1vo1td" path="res://Assets/refresh 2.png" id="6_m3jry"]
[ext_resource type="Script" path="res://Scenes/DrawingLayer.gd" id="7_4haok"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22qlw"]
texture = ExtResource("1_fnd0r")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vfs0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wgunu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pefqs")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.009
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.305
offset_right = 19.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_22qlw")

[node name="ChooseCipher" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.972
anchor_top = 0.054
anchor_right = 0.972
anchor_bottom = 0.054
offset_left = -233.744
offset_top = 0.00799942
offset_right = 0.255981
offset_bottom = 65.008
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 35
text = "Choose Cipher"

[node name="CipherMenu" type="TextureRect" parent="Panel/ChooseCipher"]
visible = false
material = SubResource("CanvasItemMaterial_vfs0h")
layout_mode = 0
offset_left = 8.0
offset_top = 75.0
offset_right = 234.0
offset_bottom = 312.0
texture = ExtResource("2_iit0j")
expand_mode = 1

[node name="Ceaser" type="TextureButton" parent="Panel/ChooseCipher/CipherMenu"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 193.0
offset_bottom = 57.0
texture_hover = ExtResource("2_lpgij")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ChooseCipher/CipherMenu/Ceaser"]
layout_mode = 0
offset_left = 43.0
offset_top = 7.0
offset_right = 144.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.435294, 0.0941176, 0.713726, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 25
text = "Ceaser"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayFair" type="TextureButton" parent="Panel/ChooseCipher/CipherMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = 56.0
offset_right = 194.0
offset_bottom = 102.0
texture_hover = ExtResource("2_lpgij")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ChooseCipher/CipherMenu/PlayFair"]
layout_mode = 0
offset_left = 43.0
offset_top = 7.0
offset_right = 144.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.435294, 0.0941176, 0.713726, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 25
text = "Play Fair"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vignere" type="TextureButton" parent="Panel/ChooseCipher/CipherMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = 102.0
offset_right = 194.0
offset_bottom = 148.0
texture_hover = ExtResource("2_lpgij")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ChooseCipher/CipherMenu/Vignere"]
layout_mode = 0
offset_left = 43.0
offset_top = 7.0
offset_right = 144.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.435294, 0.0941176, 0.713726, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 25
text = "Vignere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DES" type="TextureButton" parent="Panel/ChooseCipher/CipherMenu"]
layout_mode = 0
offset_left = 11.0
offset_top = 147.0
offset_right = 193.0
offset_bottom = 193.0
texture_hover = ExtResource("2_lpgij")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ChooseCipher/CipherMenu/DES"]
layout_mode = 0
offset_left = 43.0
offset_top = 7.0
offset_right = 144.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.435294, 0.0941176, 0.713726, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 25
text = "DES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnterText" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 103.0
offset_top = 128.0
offset_right = 460.0
offset_bottom = 225.0
texture = ExtResource("2_iit0j")
expand_mode = 1

[node name="TextEntry" type="TextEdit" parent="Panel/EnterText"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 313.0
offset_bottom = 64.0
theme_override_colors/background_color = Color(0.882353, 0.8, 1, 1)
theme_override_colors/font_color = Color(0.313726, 0, 0.392157, 1)
theme_override_colors/font_placeholder_color = Color(0.619608, 0.513726, 0.960784, 0.662745)
theme_override_colors/caret_color = Color(0.384314, 0, 0.666667, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Plain text"
caret_blink = true

[node name="EnterKey" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 104.0
offset_top = 234.0
offset_right = 461.0
offset_bottom = 331.0
texture = ExtResource("2_iit0j")
expand_mode = 1

[node name="KeyEntry" type="TextEdit" parent="Panel/EnterKey"]
layout_mode = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 302.0
offset_bottom = 74.0
theme_override_colors/background_color = Color(0.882353, 0.8, 1, 1)
theme_override_colors/font_color = Color(0.313726, 0, 0.392157, 1)
theme_override_colors/font_placeholder_color = Color(0.709804, 0.611765, 0.972549, 1)
theme_override_colors/caret_color = Color(0.396078, 0, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Key"
scroll_smooth = true

[node name="CipherLabel" type="Label" parent="."]
offset_left = 90.0
offset_top = 378.0
offset_right = 352.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0, 0.745098, 0.721569, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 35
text = "Cipher Text"

[node name="CipherText" type="TextEdit" parent="."]
offset_left = 89.0
offset_top = 419.0
offset_right = 509.0
offset_bottom = 491.0
theme_override_colors/background_color = Color(0.968627, 0.866667, 1, 0.196078)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 30

[node name="Reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.763
anchor_top = 0.056
anchor_right = 0.763
anchor_bottom = 0.056
offset_left = -54.976
offset_top = -0.288002
offset_right = 0.0239868
offset_bottom = 52.712
grow_horizontal = 0
theme_override_colors/icon_normal_color = Color(0.964706, 0.972549, 0.988235, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgunu")
icon = ExtResource("6_m3jry")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 634.0
offset_top = 208.0
offset_right = 674.0
offset_bottom = 248.0
theme_override_constants/h_separation = 72
theme_override_constants/v_separation = 63
columns = 5

[node name="Splitted_Text" type="Label" parent="."]
offset_left = 218.0
offset_top = 538.0
offset_right = 650.0
offset_bottom = 597.0
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 40

[node name="Label" type="Label" parent="."]
offset_left = 90.0
offset_top = 540.0
offset_right = 145.0
offset_bottom = 571.0
theme_override_colors/font_color = Color(0, 0.745098, 0.721569, 1)
theme_override_fonts/font = ExtResource("3_yevfl")
theme_override_font_sizes/font_size = 40
text = "Text :"

[node name="DrawingLayer" type="Node2D" parent="."]
z_index = 999
script = ExtResource("7_4haok")

[connection signal="pressed" from="Panel/ChooseCipher" to="." method="_on_choose_cipher_pressed"]
[connection signal="pressed" from="Panel/ChooseCipher/CipherMenu/Ceaser" to="." method="_on_ceaser_cipher_pressed"]
[connection signal="pressed" from="Panel/ChooseCipher/CipherMenu/PlayFair" to="." method="_on_play_fair_pressed"]
[connection signal="pressed" from="Panel/ChooseCipher/CipherMenu/Vignere" to="." method="_on_viginere_cipher_pressed"]
[connection signal="pressed" from="Panel/ChooseCipher/CipherMenu/DES" to="." method="_on_des_cipher_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
